test/function/pass/success_input.rs
struct Input;

/// Docs
fn test(_input: Input) -> proc::TokenStream {
    todo!()
}

fn main() {}
