test/function/fail/more_than_one_argument.rs
#[proc::function]
fn test(_first: (), _second: ()) -> proc::TokenStream {
    todo!()
}

fn main() {}
